<resources xmlns:tools="http://schemas.android.com/tools">

    <string name="app_name" translatable="false">Rom Control</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="dialog_color_picker">Pick Color</string>
    <string name="yes" translatable="false">OK</string>
    <string name="press_color_to_apply_new">Press to apply new color</string>
    <string name="press_color_to_apply_old">Press to apply old color</string>
    <string name="command_executed_success_toast">Executed successfully</string>
    <string name="root_tools_exception_toast">File not found or root denied</string>
    <string name="reboot_menu">Reboot menu</string>
    <string name="reboot_device_text">Reboot Device</string>
    <string name="reboot_recovery_text">Reboot Recovery</string>
    <string name="reboot_ui_text">Reboot SystemUI</string>
    <string name="app_reboot_required_dialog_title">App reboot required</string>
    <string name="app_reboot_required_dialog_message">For this action to take effect it is required to restart %1$s.\n\nPress OK to restart now</string>
    <string name="theme_dialog_title">Choose theme</string>
    <string name="changelog_version_title">Version: %1$s</string>
    <string name="backup_restore_dialog_title">Backup/Restore Rom Control system data</string>
    <string name="choose_backup_dialog_title">Please choose backup to restore</string>
    <string name="no_backup_dialog_title">No backup found on this device</string>
    <string name="no_backup_dialog_message">Would you like to create new backup now?</string>
    <string name="restore_confirm_dialog_title">Please confirm restore</string>
    <string name="restore_confirm_message">You have chosen to restore data from previous Rom Control preferences.\n\n<b>Please note! This operation will change your device settings based on the settings stored in this file.\n\n<font fgcolor="red">DO NOT PROCEED unless absolutely sure!!!</font></b>\n\nRom Control will close to allow data restoration and reopen again upon its completion. Depending on the amount of your settings this may take some time.\n\nPlease click \"OK\" to proceed or \"CANCEL\" to quit.</string>
    <string name="backup_complete_toast">Backup completed successfully. The backup file can be found at\n%1$s</string>
    <string name="backup_file_prefix_date_format" translatable="false">dd-MM-yy_HH:mm</string>
    <string name="backup_file_suffix" translatable="false">_RCBackup</string>
    <string name="restore_complete_toast">Restore complete</string>
    <string name="systemui_prefs">Settings</string>
    <string name="more_options">More options</string>
    <string name="set_theme">Set theme</string>
    <string name="backup_and_restore"><![CDATA[Backup & Restore]]></string>
    <string name="changelog">Changelog</string>
    <string name="confirm_script_dialog_message">"Are you sure you want to run %1$s?"</string>
    <string name="run_script_confirm_dialog_title">Confirmation required</string>
    <string name="run_script_confirm_dialog_positive_button">Yes, run</string>
    <string name="find_app">Find App</string>
    <string name="reboot_required_dialog_title">Device reboot required</string>
    <string name="reboot_required_dialog_message">For this action to take effect, full device reboot is required. Would you like to reboot now?</string>
    <string name="reboot_later_negative_button">later</string>
    <string name="reboot_now_dialog_button">reboot now</string>
    <string name="imminent_reboot_warning">Your device will reboot IMMEDIATELY upon script completion!!!</string>
    <string name="restore_dialog_description">This action will restore the following items to stock colors</string>
    <string name="multiple_choice_preference_button_done">Done</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>
    <string name="select_all_label">All</string>
    <string name="header_label">SystemUI MOD by Kirill22092</string>
    <string name="description">Image</string>
    <string name="root_requirements_first">Root not detected</string>
    <string name="root_requirements_second">This version of the app requires Root to work correctly</string>
    <string name="button_root_retry">Retry</string>
    <string name="permission_storage">Access to internal storage is required</string>
    <string name="permission_window">Permission to display on top of other apps is required</string>
    <string name="hex" translatable="false">HEX</string>

    <string name="lockscreen" tools:keep="@string/lockscreen">Lockscreen</string>
    <string name="notificationbar" tools:keep="@string/notificationbar">Notification Bar</string>
    <string name="fingerprint" tools:keep="@string/fingerprint">Fingerprint</string>
    <string name="other_value_text" tools:keep="@string/other_value_text">Infinite</string>
    <string name="text_clock">Text Clock</string>

</resources>
