<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <View
        android:id="@+id/protectiveView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/protective_semi_transparent_black" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="72dp"
        android:layout_marginBottom="72dp"
        android:orientation="vertical"
        android:weightSum="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/rebootDevice"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reboot_device_text"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorAccent"
                app:icon="@drawable/ic_reboot"
                app:iconTint="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1"
            android:orientation="vertical"
            android:weightSum="3">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/rebootRecovery"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reboot_recovery_text"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorAccent"
                app:icon="@drawable/ic_recovery"
                app:iconTint="@android:color/white" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="3">

            <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
                android:id="@+id/rebootUI"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/reboot_ui_text"
                android:textColor="@android:color/white"
                app:backgroundTint="@color/colorAccent"
                app:icon="@drawable/ic_android"
                app:iconTint="@android:color/white" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>