<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingLeft="5dp"
    android:paddingRight="5dp">

    <com.wubydax.romcontrol.v3.prefs.ColorPickerView
        android:id="@+id/color_picker_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layerType="software"
        android:tag="portrait" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/outlinedTextField"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hex"
        android:padding="8dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/hex_val"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="7"
            android:maxLines="1"
            tools:ignore="HardcodedText" />
    </com.google.android.material.textfield.TextInputLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/press_color_to_apply_old"
                app:autoSizeTextType="uniform" />

            <com.wubydax.romcontrol.v3.prefs.ColorPickerPanelView
                android:id="@+id/old_color_panel"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:paddingEnd="10dp"
            android:paddingStart="2dp"
            android:paddingBottom="10dp"
            android:gravity="bottom"
            android:text="→"
            android:textSize="20sp"
            tools:ignore="HardcodedText" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:text="@string/press_color_to_apply_new"
                app:autoSizeTextType="uniform" />

            <com.wubydax.romcontrol.v3.prefs.ColorPickerPanelView
                android:id="@+id/new_color_panel"
                android:layout_width="wrap_content"
                android:layout_height="40dp" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>