<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:keep="@xml/ui_prefs">
    <PreferenceCategory android:title="@string/lockscreen">
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="true"
            android:key="sys.aod.disable_media_cover"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Отображать обложку альбома на обоях" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="sys.aod.disable_voice_assist"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Заменить ярлык ассистента на телефон" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/notificationbar">
        <com.wubydax.romcontrol.v3.prefs.MySeekBarPreference
            android:defaultValue="4"
            android:key="tweaks_num_columns"
            android:title="Количество столбцов"
            app:isDiscrete="true"
            app:isSilent="false"
            app:maxValue="10"
            app:minValue="1"
            app:packageNameToKill="com.android.systemui" />
        <com.wubydax.romcontrol.v3.prefs.MySeekBarPreference
            android:defaultValue="3"
            android:key="tweaks_num_rows"
            android:title="Количество строк"
            app:isDiscrete="true"
            app:isSilent="false"
            app:maxValue="10"
            app:minValue="1"
            app:packageNameToKill="com.android.systemui" />
        <com.wubydax.romcontrol.v3.prefs.MySeekBarPreference
            android:defaultValue="6"
            android:key="tweaks_num_quick_qs"
            android:title="Количество быстрых настроек"
            app:isDiscrete="true"
            app:isSilent="false"
            app:maxValue="7"
            app:minValue="1"
            app:packageNameToKill="com.android.systemui" />
    </PreferenceCategory>
    <PreferenceCategory android:title="AOD">
        <com.wubydax.romcontrol.v3.prefs.MyListPreference
            android:defaultValue="EEEMMMd"
            android:entries="@array/sys.aod.custom_data_format_entries"
            android:entryValues="@array/sys.aod.custom_data_format_values"
            android:key="sys.aod.custom_data_format"
            android:title="Формат даты на AOD" />
        <com.wubydax.romcontrol.v3.prefs.MyListPreference
            android:defaultValue="34816"
            android:entries="@array/oem_acc_blackscreen_gestrue_enable_entries"
            android:entryValues="@array/oem_acc_blackscreen_gestrue_enable_values"
            android:key="oem_acc_blackscreen_gestrue_enable"
            android:title="Режим жеста включения экрана" />
        <com.wubydax.romcontrol.v3.prefs.MyListPreference
            android:defaultValue="3"
            android:entries="@array/op_doze_visible"
            android:entryValues="@array/op_doze_visible"
            android:key="op_doze_single_tap_pulse_duration_visible"
            android:title="Время показа после тапа (с)"
            app:reverseDependency="tweak_unlock_lock_delay" />
        <com.wubydax.romcontrol.v3.prefs.MyListPreference
            android:defaultValue="3"
            android:entries="@array/op_doze_visible"
            android:entryValues="@array/op_doze_visible"
            android:key="op_doze_pick_up_pulse_duration_visible"
            android:title="Время показа после поднятия (с)"
            app:reverseDependency="tweak_unlock_lock_delay" />
        <com.wubydax.romcontrol.v3.prefs.MyListPreference
            android:defaultValue="5"
            android:entries="@array/op_doze_duration"
            android:entryValues="@array/op_doze_duration"
            android:key="op_doze_pulse_duration_visible"
            android:title="Время показа после уведомления (с)"
            app:reverseDependency="tweak_unlock_lock_delay" />
        <com.wubydax.romcontrol.v3.prefs.MyListPreference
            android:defaultValue="3"
            android:entries="@array/op_doze_visible"
            android:entryValues="@array/op_doze_visible"
            android:key="op_doze_three_key_pulse_duration_visible"
            android:title="Время показа после переключения ползунка (с)"
            app:reverseDependency="tweak_unlock_lock_delay" />
    </PreferenceCategory>
    <PreferenceScreen
        android:icon="@drawable/ic_time_circle"
        android:summary="Установить собственные значения времени показа экрана"
        android:title="Установить свое время показа">
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="tweak_unlock_lock_delay"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Установить свое время" />
        <com.wubydax.romcontrol.v3.prefs.MyEditTextPreference
            android:defaultValue="3"
            android:dependency="tweak_unlock_lock_delay"
            android:key="op_doze_single_tap_pulse_duration_visible"
            android:title="Время показа после тапа (с)" />
        <com.wubydax.romcontrol.v3.prefs.MyEditTextPreference
            android:defaultValue="3"
            android:dependency="tweak_unlock_lock_delay"
            android:key="op_doze_pick_up_pulse_duration_visible"
            android:title="Время показа после поднятия (с)" />
        <com.wubydax.romcontrol.v3.prefs.MyEditTextPreference
            android:defaultValue="5"
            android:dependency="tweak_unlock_lock_delay"
            android:key="op_doze_pulse_duration_visible"
            android:title="Время показа после уведомления (с)" />
        <com.wubydax.romcontrol.v3.prefs.MyEditTextPreference
            android:defaultValue="3"
            android:dependency="tweak_unlock_lock_delay"
            android:key="op_doze_three_key_pulse_duration_visible"
            android:title="Время показа после переключения ползунка (с)" />
    </PreferenceScreen>
    <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
        android:defaultValue="false"
        android:key="sys.aod.notif_delay_unlock"
        android:summaryOff="Выключено"
        android:summaryOn="Включено"
        android:title="Режим индикатора уведомлений" />
    <com.wubydax.romcontrol.v3.prefs.MyEditTextPreference
        android:defaultValue="5"
        android:dependency="sys.aod.notif_delay_unlock"
        android:key="op_doze_three_key_pulse_duration_visible"
        android:title="Время скрытия уведомления (с)" />
    <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
        android:defaultValue="true"
        android:key="sui_aod_weather_enabled"
        android:summaryOff="Отключено"
        android:summaryOn="Показывать"
        android:title="Всегда показывать погоду на AOD" />
    <PreferenceCategory android:title="@string/fingerprint">
        <com.wubydax.romcontrol.v3.prefs.ThumbnailListPreference
            android:defaultValue="1"
            android:key="op_custom_unlock_animation_style"
            android:title="Выбор анимации отпечатка пальца"
            app:dependentValue="1"
            app:drawableArray="@array/op_custom_unlock_animation_style_drawables"
            app:entryList="@array/op_custom_unlock_animation_style_entries"
            app:entryValuesList="@array/op_custom_unlock_animation_style_values" />
        <com.wubydax.romcontrol.v3.prefs.ThumbnailListPreference
            android:defaultValue="0"
            android:key="sys.fingerprint_icon"
            android:title="Выбор иконки отпечатка пальца"
            app:dependentValue="0"
            app:drawableArray="@array/op_custom_icon_style_drawables"
            app:entryList="@array/op_custom_icon_style_entries"
            app:entryValuesList="@array/op_custom_icon_style_values"
            app:reverseDependency="sys.fingerprint_anim_enable" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="sys.fingerprint_anim_enable"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Включить анимацию иконки"
            app:reverseDependency="sys.fingerprint_compat_opfp" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:dependency="sys.fingerprint_anim_enable"
            android:key="sys.fingerprint_anim_type"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Альтернативная анимация иконки"
            app:reverseDependency="sys.fingerprint_compat_opfp" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="sys.aod.hide_fingerprint"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Скрыть иконку сканера отпечатка пальца"
            app:reverseDependency="sys.fingerprint_compat_opfp" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="sys.aod.fsquare"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Квадратная область подсветки"
            app:reverseDependency="sys.fingerprint_compat_opfp" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="sys.fingerprint_compat_opfp"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Режим совместимости с OPFP" />
    </PreferenceCategory>
    <PreferenceScreen
        android:icon="@drawable/ic_theme_circle"
        android:summary="Установить цвета значка сканера отпечатков пальцев"
        android:title="Настройки цвета значка сканера"
        app:reverseDependency="sys.fingerprint_compat_opfp">
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="sys.aod.cust_color_finger_light_unlock"
            android:summaryOff="Выключено (Для эксперементов)"
            android:summaryOn="Включено (Для эксперементов)"
            android:title="Установить свой цвет подсветки пальца"
            app:isSilent="false"
            app:packageNameToKill="com.android.systemui"
            app:reverseDependency="sys.fingerprint_compat_opfp" />
        <com.wubydax.romcontrol.v3.prefs.ColorPickerPreference
            android:defaultValue="\#ff00ff00"
            android:dependency="sys.aod.cust_color_finger_light_unlock"
            android:key="sys.aod.cust_color_finger_light"
            android:summary="Выбрать цвет"
            android:title="Цвет подсветки пальца"
            app:isSilent="false"
            app:packageNameToKill="com.android.systemui" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="sys.aod.fcolor_normal_unlock"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Установить свой цвет иконки"
            app:reverseDependency="sys.fingerprint_compat_opfp" />
        <com.wubydax.romcontrol.v3.prefs.ColorPickerPreference
            android:defaultValue="\#ff00ff00"
            android:dependency="sys.aod.fcolor_normal_unlock"
            android:key="sys.aod.fcolor_normal"
            android:summary="Выбрать цвет"
            android:title="Цвет иконки сканера" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="sys.aod.fcolor_disable_unlock"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Установить свой цвет неактивной иконки"
            app:reverseDependency="sys.fingerprint_compat_opfp" />
        <com.wubydax.romcontrol.v3.prefs.ColorPickerPreference
            android:defaultValue="\#ff00ff00"
            android:dependency="sys.aod.fcolor_disable_unlock"
            android:key="sys.aod.fcolor_disable"
            android:summary="Выбрать цвет"
            android:title="Цвет неактивной иконки сканера" />
    </PreferenceScreen>
    <PreferenceCategory android:title="Horizon Light">
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="true"
            android:key="sys.aod.notif_light_enable"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Включить Horizon Light" />
        <com.wubydax.romcontrol.v3.prefs.MySeekBarPreference
            android:defaultValue="1"
            android:key="tweaks_edge_notif_repeat_count"
            android:title="Количество повторений Horizon Light"
            app:maxValue="50"
            app:minValue="0"
            app:otherValueString="0"
            app:otherValueStringText="@string/other_value_text" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="tweak_repeat_mode"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Обратная анимация" />
    </PreferenceCategory>
    <PreferenceScreen
        android:icon="@drawable/ic_theme_circle"
        android:summary="Установить собственные значения цвета Horizon Light"
        android:title="Настройка цвета Horizon Light">
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="sys.aod.app_color_unlock"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Установить цвет приложения"
            app:reverseDependency="sys.aod.custom_color_unlock" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="sys.aod.custom_color_unlock"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Установить свои цвета"
            app:reverseDependency="sys.aod.app_color_unlock" />
        <com.wubydax.romcontrol.v3.prefs.ColorPickerPreference
            android:defaultValue="\#ff00ff00"
            android:dependency="sys.aod.custom_color_unlock"
            android:key="tweaks_left_edge_notif_color"
            android:summary="Выбрать цвет"
            android:title="Цвет уведомления левого края" />
        <com.wubydax.romcontrol.v3.prefs.ColorPickerPreference
            android:defaultValue="\#ff00ff00"
            android:dependency="sys.aod.custom_color_unlock"
            android:key="tweaks_right_edge_notif_color"
            android:summary="Выбрать цвет"
            android:title="Цвет уведомления правого края" />
    </PreferenceScreen>
    <PreferenceCategory android:title="Другое">
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="false"
            android:key="tweaks_all_rotations"
            android:summaryOff="Выключено"
            android:summaryOn="Включено"
            android:title="Включить поворот на 360°" />
        <com.wubydax.romcontrol.v3.prefs.MySwitchPreference
            android:defaultValue="true"
            android:key="tweaks_secure_window"
            android:summaryOff="Скриншоты разрешены везде"
            android:summaryOn="Скриншоты в некоторых приложениях запрещены"
            android:title="Включить безопасные скриншоты" />
    </PreferenceCategory>
</PreferenceScreen>